# food-paralysis-antidote

./: .gitignore  CHANGELOG.md  README.md  food-paralysis-antidote.cabal  install
app/: Main.hs  Settings.hs
