cabal-version:      2.4
name:               food-paralysis-antidote
version:            0.1.0.0
author:             Samuel Schlesinger
maintainer:         samuel@simspace.com
extra-source-files: CHANGELOG.md

executable food-paralysis-antidote
    main-is:          Main.hs
    other-modules:    Settings
    build-depends:    base ^>=4.15.0.0, optparse-applicative ^>=0.16.1.0, random ^>=1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
